--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.6
+  http: ^1.5.0
   provider: ^6.1.1
   flutter_secure_storage: ^9.0.0
   flutter_native_splash: ^2.3.5
-  image_picker: ^0.8.7+4
-  mime: ^1.0.4
+  image_picker: ^1.2.0
+  mime: ^2.0.0
   path: ^1.8.3
-  connectivity_plus: ^5.0.2
-  lottie: ^2.7.0
+  connectivity_plus: ^7.0.0
+  lottie: ^3.3.1
   url_launcher: ^6.2.5
-  flutter_dotenv: ^5.1.0
-  package_info_plus: ^6.0.0
+  flutter_dotenv: ^6.0.0
+  package_info_plus: ^9.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,7 +52,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_screenutil: ^5.9.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
